src/go.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { root: peg$parseroot },
      peg$startRuleFunction  = peg$parseroot,

      peg$c0 = function(first, list, last) {
            let result = []
            if (first.content.length > 0) { result.push(first) }
            list.forEach((x) => {
              if (x.type != "text" || x.content.length > 0) { result.push(x) }
            })
            if (last.content.length > 0) { result.push(last) }
            return result
          },
      peg$c1 = function(content) {
            if (content.length > 0) {
              return [{ type: "text", content: content }]
            } else {
              return []
            }
          },
      peg$c2 = function(left, body, right) { return { type: "text", content: body, ...left, ...right } },
      peg$c3 = function(body, right) { return { type: "text", content: body, ...right } },
      peg$c4 = function(left, body) { return { type: "text", content: body, ...left } },
      peg$c5 = "{{-",
      peg$c6 = peg$literalExpectation("{{-", false),
      peg$c7 = function() { return { trimRight: true } },
      peg$c8 = "{{",
      peg$c9 = peg$literalExpectation("{{", false),
      peg$c10 = function() { return {} },
      peg$c11 = "-}}",
      peg$c12 = peg$literalExpectation("-}}", false),
      peg$c13 = function() { return { trimLeft: true } },
      peg$c14 = "}}",
      peg$c15 = peg$literalExpectation("}}", false),
      peg$c16 = peg$otherExpectation("text"),
      peg$c17 = function(chars) { return chars.join("") },
      peg$c18 = function(char) { return char },
      peg$c19 = peg$otherExpectation("expression"),
      peg$c20 = function(body) { return body },
      peg$c21 = "(",
      peg$c22 = peg$literalExpectation("(", false),
      peg$c23 = ")",
      peg$c24 = peg$literalExpectation(")", false),
      peg$c25 = function(term) { return term },
      peg$c26 = peg$otherExpectation("with block"),
      peg$c27 = "with",
      peg$c28 = peg$literalExpectation("with", false),
      peg$c29 = function(term, body, elseBody) { return { type: "with", term: term, body: body, elseBody: elseBody || [] } },
      peg$c30 = peg$otherExpectation("if block"),
      peg$c31 = "if",
      peg$c32 = peg$literalExpectation("if", false),
      peg$c33 = function(term, body, elseBody) { return { type: "if", term: term, body: body, elseBody: elseBody || [] } },
      peg$c34 = "else ",
      peg$c35 = peg$literalExpectation("else ", false),
      peg$c36 = function(term, body, elseBody) { return { type: "if", term: term, body: body, elseBody: elseBody } },
      peg$c37 = peg$otherExpectation("range block"),
      peg$c38 = "range",
      peg$c39 = peg$literalExpectation("range", false),
      peg$c40 = function(term, body) { return { type: "range", term: term, ...body } },
      peg$c41 = ", ",
      peg$c42 = peg$literalExpectation(", ", false),
      peg$c43 = function(index, term, body) { return { type: "range", declareIndex: index, term: term, ...body } },
      peg$c44 = function(body, elseBody) { return { body: body, elseBody: elseBody || [] } },
      peg$c45 = peg$otherExpectation("block block"),
      peg$c46 = "block",
      peg$c47 = peg$literalExpectation("block", false),
      peg$c48 = function(term, body) { return { type: "block", term: term, body: body } },
      peg$c49 = peg$otherExpectation("block body"),
      peg$c50 = function(first, lists) {
            var result = []
            if (first.content.length > 0) { result.push(first) }
            lists.forEach((list) => {
              list.forEach((x) => {
                if (x.type != "text" || x.content.length > 0) { result.push(x) }
              })
            })
            return result
          },
      peg$c51 = function(expr) { return expr },
      peg$c52 = peg$otherExpectation("else"),
      peg$c53 = "else",
      peg$c54 = peg$literalExpectation("else", false),
      peg$c55 = peg$otherExpectation("end"),
      peg$c56 = "end",
      peg$c57 = peg$literalExpectation("end", false),
      peg$c58 = peg$otherExpectation("variable declaration"),
      peg$c59 = "$",
      peg$c60 = peg$literalExpectation("$", false),
      peg$c61 = ":=",
      peg$c62 = peg$literalExpectation(":=", false),
      peg$c63 = function(name, value) { return { type: "declare", name: name, value: value } },
      peg$c64 = peg$otherExpectation("variable assignation"),
      peg$c65 = "=",
      peg$c66 = peg$literalExpectation("=", false),
      peg$c67 = function(name, value) { return { type: "assign", name: name, value: value } },
      peg$c68 = "",
      peg$c69 = function(name) { return { type: "variable", name: name } },
      peg$c70 = peg$otherExpectation("pipeline"),
      peg$c71 = "|",
      peg$c72 = peg$literalExpectation("|", false),
      peg$c73 = function(first, rest) {
          var root = first
          rest.forEach((r) => { root = { type: "pipe", from: root, to: r[3] } })
          return root
        },
      peg$c74 = peg$otherExpectation("pipeline expression"),
      peg$c75 = ".",
      peg$c76 = peg$literalExpectation(".", false),
      peg$c77 = function(name) { return name },
      peg$c78 = function(root, names) {
          var root = root || { type: "root" }
          names.forEach((name) => { root = { type: "dot", of: root, name: name } })
          return root
        },
      peg$c79 = function(target, args) {
          if (args.length == 0) {
            return target
          } else {
            return { type: "invoke", target: target, args: args }
          }
        },
      peg$c80 = function(name) { return { type: "builtin", name: name } },
      peg$c81 = function() { return { type: "root" } },
      peg$c82 = function(chars) { return { type: "invalid", content: chars.join("") } },
      peg$c83 = peg$otherExpectation("identifier"),
      peg$c84 = /^[A-Za-z_]/,
      peg$c85 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c86 = /^[0-9A-Za-z_]/,
      peg$c87 = peg$classExpectation([["0", "9"], ["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c88 = function(first, rest) { return [first, ...rest].join("") },
      peg$c89 = peg$otherExpectation("number"),
      peg$c90 = "-",
      peg$c91 = peg$literalExpectation("-", false),
      peg$c92 = "+",
      peg$c93 = peg$literalExpectation("+", false),
      peg$c94 = function() { return { type: "number", value: parseFloat(text()) }; },
      peg$c95 = /^[eE]/,
      peg$c96 = peg$classExpectation(["e", "E"], false, false),
      peg$c97 = /^[0-9]/,
      peg$c98 = peg$classExpectation([["0", "9"]], false, false),
      peg$c99 = "0",
      peg$c100 = peg$literalExpectation("0", false),
      peg$c101 = /^[1-9]/,
      peg$c102 = peg$classExpectation([["1", "9"]], false, false),
      peg$c103 = "\"",
      peg$c104 = peg$literalExpectation("\"", false),
      peg$c105 = /^[^"]/,
      peg$c106 = peg$classExpectation(["\""], true, false),
      peg$c107 = function(chars) { return { type: "string", content: chars.join("") } },
      peg$c108 = "`",
      peg$c109 = peg$literalExpectation("`", false),
      peg$c110 = /^[^`]/,
      peg$c111 = peg$classExpectation(["`"], true, false),
      peg$c112 = "'",
      peg$c113 = peg$literalExpectation("'", false),
      peg$c114 = /^[^']/,
      peg$c115 = peg$classExpectation(["'"], true, false),
      peg$c116 = function(chars) { return { type: "char", content: chars.join("") } },
      peg$c117 = peg$otherExpectation("comment"),
      peg$c118 = function(chars) { return { type: "comment", content: chars.join("") } },
      peg$c119 = "/*",
      peg$c120 = peg$literalExpectation("/*", false),
      peg$c121 = "*/",
      peg$c122 = peg$literalExpectation("*/", false),
      peg$c123 = peg$otherExpectation("whitespace"),
      peg$c124 = /^[ \t\n\r]/,
      peg$c125 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c126 = /^[^\0-\x1F"\\]/,
      peg$c127 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c128 = "\\",
      peg$c129 = peg$literalExpectation("\\", false),
      peg$c130 = "/",
      peg$c131 = peg$literalExpectation("/", false),
      peg$c132 = "b",
      peg$c133 = peg$literalExpectation("b", false),
      peg$c134 = function() { return "\b" },
      peg$c135 = "f",
      peg$c136 = peg$literalExpectation("f", false),
      peg$c137 = function() { return "\f" },
      peg$c138 = "n",
      peg$c139 = peg$literalExpectation("n", false),
      peg$c140 = function() { return "\n" },
      peg$c141 = "r",
      peg$c142 = peg$literalExpectation("r", false),
      peg$c143 = function() { return "\r" },
      peg$c144 = "t",
      peg$c145 = peg$literalExpectation("t", false),
      peg$c146 = function() { return "\t" },
      peg$c147 = "u",
      peg$c148 = peg$literalExpectation("u", false),
      peg$c149 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16))
              },
      peg$c150 = function(sequence) { return sequence },
      peg$c151 = /^[0-9a-f]/i,
      peg$c152 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseroot() {
    var s0;

    s0 = peg$parseroottmpl();
    if (s0 === peg$FAILED) {
      s0 = peg$parseroottextonly();
    }

    return s0;
  }

  function peg$parseroottmpl() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsetextfirst();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsetext();
        if (s4 === peg$FAILED) {
          s4 = peg$parseexpr();
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsetext();
          if (s4 === peg$FAILED) {
            s4 = peg$parseexpr();
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsetextlast();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseroottextonly() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsetextbody();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetext() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsetextbegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextbody();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetextend();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextfirst() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsetextbody();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextend();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextlast() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsetextbegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextbody();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextend() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c8) {
        s1 = peg$c8;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsetextbegin() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c11) {
      s1 = peg$c11;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c13();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c14) {
        s1 = peg$c14;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsetextbody() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsetextchar();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsetextchar();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c17(s1);
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    return s0;
  }

  function peg$parsetextchar() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parsetextend();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = void 0;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseanychar();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c18(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpr() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubstbody();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c20(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }

    return s0;
  }

  function peg$parsesubstbody() {
    var s0;

    s0 = peg$parsewithblock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseifblock();
      if (s0 === peg$FAILED) {
        s0 = peg$parserangeblock();
        if (s0 === peg$FAILED) {
          s0 = peg$parseblockblock();
          if (s0 === peg$FAILED) {
            s0 = peg$parsedeclare();
            if (s0 === peg$FAILED) {
              s0 = peg$parseassign();
              if (s0 === peg$FAILED) {
                s0 = peg$parsepipeline();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseinvalid();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseatom() {
    var s0;

    s0 = peg$parsenumber();
    if (s0 === peg$FAILED) {
      s0 = peg$parsevariable();
      if (s0 === peg$FAILED) {
        s0 = peg$parsestring();
        if (s0 === peg$FAILED) {
          s0 = peg$parsestringraw();
          if (s0 === peg$FAILED) {
            s0 = peg$parsestringchar();
            if (s0 === peg$FAILED) {
              s0 = peg$parseparens();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseparens() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c21;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsepipeline();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c23;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c24); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c25(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsewithblock() {
    var s0, s1, s2, s3, s4, s5;
